improved Autoanchor+ - improved Autoanchor.java self dmg calculations
added serverUtils.java

improved combatUtils.java

improved WorldUtils.java

improved webAura.java
- slightly fixed some stuff

improved autoTrap.java
- fixed placing logic